# bipa-code-challenge

./: Cargo.toml
src/: connectivity.rs  errors.rs  main.rs  routes.rs  utils.rs
