[package]
name = "bipa_backend_challenge"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1.0"
surrealdb = { version = "2.4", default-features = false, features = ["kv-mem"] }
axum = "0.8"
chrono = "0.4"
